--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "bin": {
+    "studyblue-bypass": "./index.js"
+  },
+  "preferGlobal": true,
   "author": "Ian Macalinao <me@ian.pw>",
   "license": "MIT",
   "dependencies": {
